learning_tf2_cpp/log/build_2024-04-14_12-05-07/learning_tf2_cpp/stdout_stderr.log
[35m[1mScanning dependencies of target turtle_tf2_listener[0m
[ 25%] Built target dynamic_frame_tf2_broadcaster
[ 50%] Built target fixed_frame_tf2_broadcaster
[ 75%] Built target turtle_tf2_broadcaster
[ 87%] [32mBuilding CXX object CMakeFiles/turtle_tf2_listener.dir/src/turtle_tf2_listener.cpp.o[0m
/home/ccl/ros2_ws/learning_tf2_cpp/src/turtle_tf2_listener.cpp: In member function ‘void FrameListener::on_timer()’:
/home/ccl/ros2_ws/learning_tf2_cpp/src/turtle_tf2_listener.cpp:61:12: error: ‘TIme’ is not a member of ‘rclcpp’; did you mean ‘Time’?
   61 |    rclcpp::TIme when = now - rclcpp::Duration(5, 0);
      |            ^~~~
      |            Time
/home/ccl/ros2_ws/learning_tf2_cpp/src/turtle_tf2_listener.cpp:64:20: error: ‘when’ was not declared in this scope
   64 |      fromFrameRel, when,
      |                    ^~~~
make[2]: *** [CMakeFiles/turtle_tf2_listener.dir/build.make:63: CMakeFiles/turtle_tf2_listener.dir/src/turtle_tf2_listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:138: CMakeFiles/turtle_tf2_listener.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
